--- a/key.html
+++ b/key.html
@@ -6,6 +6,7 @@
 <body>
     <h1>Welcome to My Website!</h1>
     <p>This is deployed using CI/CD.</p>
-    <p> test </p>
+    <p>This page is deployed using CI/CD.</p>
+    <p><strong>Last updated:</strong> March 18, 2025</p>
 </body>
 </html>
